--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,27 +21,22 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  google_sign_in: 4.5.4
+  get: 3.11.1
+  cloud_firestore: 0.14.0+2
+  firebase_auth: 0.18.0+1
+  firebase_core: 0.5.0
+  cupertino_icons: ^1.0.0
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-
 dev_dependencies:
+  lint: 1.2.0
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
