--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  font_awesome_flutter: 8.8.1
   google_sign_in: 4.5.4
   get: 3.11.1
   cloud_firestore: 0.14.0+2
@@ -31,6 +32,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  device_preview: 0.4.8
   lint: 1.2.0
   flutter_test:
     sdk: flutter
