--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  get_storage: 1.3.1
   font_awesome_flutter: 8.8.1
   google_sign_in: 4.5.4
   get: 3.11.1
@@ -32,10 +33,20 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_launcher_name: 0.0.1
+  flutter_launcher_icons: 0.8.0
   device_preview: 0.4.8
   lint: 1.2.0
   flutter_test:
     sdk: flutter
+
+flutter_launcher_name:
+  name: "walktron"
+
+flutter_icons:
+  android: true
+  ios: true
+  # image_path: "assets/appIcon/.png"
 
 flutter:
 
