--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  animations: 1.1.2
+  curved_navigation_bar: 0.3.4
   get_storage: 1.3.1
   font_awesome_flutter: 8.8.1
   google_sign_in: 4.5.4
