--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,29 +6,26 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  blemulator: 1.1.3
-  flutter_ble_lib: 2.3.0
-  fl_chart: 0.11.1
-  flutter_bluetooth_serial: 0.2.2
-  flutter_blue: 0.7.2
-  animations: 1.1.2
-  curved_navigation_bar: 0.3.4
-  get_storage: 1.3.1
-  font_awesome_flutter: 8.8.1
-  google_sign_in: 4.5.4
-  get: 3.11.1
-  cloud_firestore: 0.14.0+2
-  firebase_auth: 0.18.0+1
-  firebase_core: 0.5.0
-  cupertino_icons: ^1.0.0
+  fl_chart:
+  flutter_bluetooth_serial: ^0.2.2
+  animations: 
+  curved_navigation_bar: 
+  get_storage: 
+  font_awesome_flutter: 
+  google_sign_in: 
+  get: 
+  cloud_firestore: 
+  firebase_auth: 
+  firebase_core: 
+  cupertino_icons: 
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_launcher_name: 0.0.1
   flutter_launcher_icons: 0.8.0
-  device_preview: 0.4.8
-  lint: 1.2.0
+  device_preview: 
+  lint: 
   flutter_test:
     sdk: flutter
 
@@ -41,36 +38,4 @@ flutter_icons:
   # image_path: "assets/appIcon/.png"
 
 flutter:
-
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
