update readme and adding ble plugins

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  permission_handler: 5.0.1+1
+  flutter_ble_lib: 2.3.0
+  flutter_blue: 0.7.2
   fl_chart:
   flutter_bluetooth_serial: ^0.2.2
   animations: 
